# i240a

submit/lab1/exercises/2-separate-compilation/: quadratic.cc
submit/lab1/exercises/5-auto-dependencies/: Makefile  fns-compare.tar
submit/lab10/: CMakeLists.txt
submit/lab10/exercises/1-fact/: catch.hh  fact.cc  test-main.cc
submit/lab10/exercises/2-tdd/: digit-sum.cc  test-main.cc
submit/lab11/: CMakeLists.txt
submit/lab11/lab11/: Makefile  balanced.cc  main
submit/lab2/exercises/1-hello/: hello.cc
submit/lab2/exercises/2-hello/: hello.cc  hello.cc~
submit/lab3/exercises/2-greet/: greet.cc~
submit/lab3/exercises/3-greet/: greet.cc  greet.cc~
submit/lab3/exercises/4-sortnums/: sortnums.cc  sortnums.cc~
submit/lab3/exercises/5-numpaths/: numpaths.cc
submit/lab4/exercises/1-point/: #main.cc#  main.cc
submit/lab4/exercises/2-shape/: main.cc  shapes.hh
submit/lab8/: lab8.html  lab8.umt
submit/lab9/: CMakeLists.txt
submit/lab9/exercises/3-stats/: main.cc  ops.cc  ops.hh
submit/lab9/exercises/4-time/: .gitignore  main.cc
submit/prj1/: prj1.html
submit/prj1-sol/: #Makefile#  #main.cc#  CMakeLists.txt  main.cc  prj1.umt  test.txt  test2.txt  wordcounts
submit/prj1/prj1-sol/: Makefile  Makefile~  main  main.cc  main.cc~  main.h  main.h~  test.txt  wordcounts
submit/prj2-sol/: CMakeLists.txt  README  nums  prj2.html  seq-test
submit/prj2/prj2-sol/: Makefile  dlinkseq.hh  nums  nums.cc  seq-test
submit/prj3/: prj3.html  prj3.umt
submit/team-project/: team-project.html  team-project.umt
work/: test2.c
(+17 files in other folders)
